--- a/latihan html/tugas-1-adnan.html
+++ b/latihan html/tugas-1-adnan.html
@@ -6,19 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LATIHAN AWAL HTML</title>
+    <link rel="" href="STYLE.css">
 </head>
 
 <body>
-    <H1>DAREL KOCLOCK</H1>
-    <h3>HTML itu adalah sebuah bahasa yang menggunakan markup atau penanda untuk membuat halaman web. Penanda atau
-        markup ini, nanti akan kita sebut dengan Tag. Penanda atau markup ini, nanti akan kita sebut dengan HTML
-        berperan untuk menentukan struktur konten dan tampilan dari sebuah web. Kalau kita ibaratkan nih..HTML itu
-        seperti batu bata untuk membangun rumah. Batu bata ini dapat disusun, hingga menjadi fondasi dasar. HTML
-        memiliki kelebihan seperti memiliki sumber komunitas yang cukup besar dengan pengguna yang luas. Tidak hanya
-        itu, kelebihan lainnya adalah HTML mudah untuk dipelajari oleh seorang Web Developer pemula. Kelebihan lainnya
-        adalah HTML merupakan bahasa pemrograman yang gratis atau open source</H3>
+    <div class="text">
+        <H1><b>Apa itu HTML?</b></H1>
 
-    <IMG>https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4YKyt6Ty8AfECFK9Lb6nWGVcVTrG4rvVqK3m5pfvOTqE0Blbl-We5l1X111ilnnObad94ZIa7sTf2kIBOIf6SkNV-MgJWCJPmw04c_tl-&s=10</IMG>
+
+        <p>
+            PPLG adalah singkatan dari <b>Pengembangan Perangkat Lunak</b> dan <b>Gim</b>, sebuah jurusan di Sekolah
+            Menengah Kejuruan
+            (SMK) yang fokus pada keahlian membuat, mengelola, dan memelihara perangkat lunak (software) serta permainan
+            (game). Jurusan ini merupakan evolusi dari <u>RPL (Rekayasa Perangkat Lunak)</u> dan membekali siswa dengan
+            keterampilan coding, desain UI/UX, basis data, hingga manajemen proyek untuk menghasilkan aplikasi web,
+            mobile, dan desktop, dengan <b><i><U>prospek karir yang luas di industri teknologi</U></i></b>.
+        </p>
+    </div>
+
+
 </body>
 
 </html>
