--- a/latihan html/tugas-1-adnan.html
+++ b/latihan html/tugas-1-adnan.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="text">
-        <H1><b>Apa itu HTML?</b></H1>
+        <H1><b>Apa itu PPLG?</b></H1>
 
 
         <p>
@@ -28,3 +28,4 @@
 </body>
 
 </html>
+
